removed all traces of hand coded dodgienes

--- a/set_IHC_dict.ipynb
+++ b/set_IHC_dict.ipynb
@@ -219,7 +219,7 @@
             "I:4\n",
             "V:4\n",
             "D:4\n",
-            "BH:4\n",
+            "BH:8\n",
             "K:4\n",
             "L:4\n",
             "M:4\n",
@@ -234,8 +234,7 @@
             "CK:4\n",
             "W:4\n",
             "X:4\n",
-            "Y:4\n",
-            "Y1:4\n",
+            "Y:8\n",
             "Z:4\n",
             "BA:4\n",
             "BB:4\n",
@@ -295,7 +294,6 @@
             "BD:4\n",
             "BP:4\n",
             "DM:4\n",
-            "BH1:4\n",
             "ZZZ:4\n",
             "DO:4\n",
             "DN:4\n",
@@ -374,14 +372,96 @@
         "with open(infile, 'r') as in_fh:\n",
         "    case_statements_string = in_fh.read()\n",
         "\n",
-        "NUM_CASES = 101  # includes Y, Y1, BH and BH1\n",
+        "NUM_CASES = 101  # includes Y, Y, BH and BH\n",
         "#########################################################################\n",
         "# define IHC_dict dictionary to catalogue IHC case statements\n",
         "#########################################################################\n",
         "case_statement_list = [m.groupdict()\n",
-        "                       for m in case_ptrn.finditer(case_statements_string)]\n",
+        "                       for m in case_ptrn.finditer(case_statements_string)]\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# for case in case_statement_list:\n",
+        "#     print(case['wre_code'])\n",
+        "\n",
+        "codes1 = case_statement_list[:NUM_CASES]\n",
+        "codes2 = case_statement_list[NUM_CASES:2*NUM_CASES]\n",
+        "codes3 = case_statement_list[2*NUM_CASES:3*NUM_CASES]\n",
+        "codes4 = case_statement_list[3*NUM_CASES:4*NUM_CASES]\n",
+        "\n",
+        "# for i in range(101):\n",
+        "#     print(f\"{codes1[i]['wre_code']}\\t{codes2[i]['wre_code']}\\t{codes3[i]['wre_code']}\\t{codes4[i]['wre_code']}\")\n",
+        "\n",
+        "codes_seen = []\n",
+        "for i in range(101):\n",
+        "    current_code = codes1[i]['wre_code']\n",
+        "    codes_seen.append(current_code)\n",
+        "    if current_code in codes_seen[:i]:\n",
+        "        current_code = current_code+'1'\n",
+        "        codes1[i]['wre_code'] = current_code\n",
+        "    # print(f\"{codes1[i]}\")\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'DV'"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "codes1[0]['wre_code']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'case_statement': \"WHEN  Cr_Expns_Descn_Txt  LIKE ANY ('%ABN%registration%', '%BUSINESS%NAME%REGISTRATION%','%BUSINESS%REGISTRATION%', '%company%registration%'\\n,'%ABN%reg%', '%BUSINESS%NAME%REG%','%BUSINESS%REG%', '%company%reg%'\\n,'BUSINESS NAME'\\n)\\nAND Cr_Expns_Descn_Txt  NOT LIKE ALL (\\n'BUSINESS VEHICLE REGO' , 'COMPANY CAR REGO PAYMENT'\\n,'%HONDA REGISTRATION%','%JEEP REGISTRATION%','%TRAILER REGISTRATION%'\\n,'%TRIP REGO FEE%','%VAN - REGISTRATION%','%CAR REGISTRATION%'\\n)\\nTHEN 'DI: Business Registration'\",\n",
+              " 'logic': \"  Cr_Expns_Descn_Txt  LIKE ANY ('%ABN%registration%', '%BUSINESS%NAME%REGISTRATION%','%BUSINESS%REGISTRATION%', '%company%registration%'\\n,'%ABN%reg%', '%BUSINESS%NAME%REG%','%BUSINESS%REG%', '%company%reg%'\\n,'BUSINESS NAME'\\n)\\nAND Cr_Expns_Descn_Txt  NOT LIKE ALL (\\n'BUSINESS VEHICLE REGO' , 'COMPANY CAR REGO PAYMENT'\\n,'%HONDA REGISTRATION%','%JEEP REGISTRATION%','%TRAILER REGISTRATION%'\\n,'%TRIP REGO FEE%','%VAN - REGISTRATION%','%CAR REGISTRATION%'\\n)\\n\",\n",
+              " 'wre_code': 'DI',\n",
+              " 'code_desc': 'Business Registration'}"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "codes1[9]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# IHC_dict = {statement['wre_code']: statement['case_statement']\n",
+        "#             for statement in case_statement_list[:NUM_CASES]}\n",
+        "\n",
         "IHC_dict = {statement['wre_code']: statement['case_statement']\n",
-        "            for statement in case_statement_list[:NUM_CASES]}\n",
+        "            for statement in codes1}\n",
         "\n",
         "preprocess1 = re.compile(r\"(\\w+)(%+)(\\w+)\")\n",
         "preprocess2 = re.compile(r\"['\\n()%]\")\n",
@@ -443,7 +523,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 12,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'code_descr': 'Parking/Tolls', 'like_any': 'parking|toll|car park|CARPARK|ETAG|motorway|citylink|CITY LINK|CITI LINK|eastlink|LINKT|park|EAST LINK|PARKIG|PARKIGN|PARKIING|PARKIMG|PARKIN|PARKINH|PARKINING|PARK|CAR PARKS|E TAG|WILSON|WILSONS|PAKING', 'regexp': None, 'not_like_all': 'royal|plaza|regis|tower|national park|SPARK|postage|percentage|security tag|advantage|name tag|instagram|parker pen|LEAD TAGGING|LUNA PARK|TOLLS OF TRADE|PAKING BOXES|ALBERT PARK|ERSKIN PARK|EXL CAR PARKS|MACQUARIE PARK|DUDLEY PARK|NATURE PARK|PARKES|PARK MANAGEMENT|PARKVILLE|ROSNY PARK|STUART PARK|SHIFT PARK TO|ARIAH PARK|PRESIDENTS PARK|ERSKINE PARK'}\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(IHC_dict['Y'])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
@@ -460,7 +557,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 14,
       "metadata": {
         "id": "DaXGx53IoUs_",
         "outputId": "940491cd-92f3-4eb3-ecff-a0f4bbac0891"
@@ -480,7 +577,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 15,
       "metadata": {
         "id": "BPLyOV8NoUs_",
         "outputId": "be971fac-0979-4a28-8737-52f87bd44174"
@@ -500,7 +597,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 16,
       "metadata": {
         "id": "PHIjFruioUs_",
         "outputId": "c51cfb97-cf41-4be2-d02a-ff7bd00a3574"
@@ -520,7 +617,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 17,
       "metadata": {
         "id": "-HfUsStMoUtA"
       },
@@ -539,6 +636,46 @@
         "\n",
         "# reconstruct the case statement dictionary from its text description\n",
         "IHC_dict = json.loads(dictionary_as_text)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "101"
+            ]
+          },
+          "execution_count": 18,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "len(IHC_dict.keys())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "dict_keys(['DV', 'BG', 'A', 'B', 'E', 'CI', 'BS', 'DK', 'C', 'DI', 'F', 'G', 'H', 'J', 'I', 'V', 'D', 'BH', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'U', 'S', 'T', 'CK', 'W', 'X', 'Y', 'Y1', 'Z', 'BA', 'BB', 'BC', 'BF', 'BI', 'BJ', 'BK', 'BL', 'BM', 'BN', 'BO', 'BQ', 'BR', 'AM', 'BT', 'BU', 'BV', 'BW', 'BX', 'BY', 'BZ', 'CA', 'CB', 'CC', 'CD', 'CE', 'CF', 'CG', 'CH', 'CJ', 'CM', 'CN', 'CO', 'CP', 'CQ', 'CR', 'CS', 'CT', 'CU', 'CV', 'CW', 'CX', 'CY', 'CZ', 'DA', 'DB', 'DC', 'DD', 'DE', 'DF', 'DG', 'DH', 'DJ', 'DT', 'CL', 'BD', 'BP', 'DM', 'BH1', 'ZZZ', 'DO', 'DN', 'DP', 'DQ', 'DR', 'DS'])"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "IHC_dict.keys()"
       ]
     }
   ],
