--- a/set_IHC_dict.ipynb
+++ b/set_IHC_dict.ipynb
@@ -5,7 +5,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Save IHC case statement in a Dictionary"
+        "## Save IHC case statements in a Dictionary"
       ]
     },
     {
@@ -15,11 +15,11 @@
         "id": "k5P8IqGdoUs6"
       },
       "source": [
-        "Two case statements in IHC - 2021 v19 20221014 have been hand edited\n",
+        "Two case statements in IHC - 2021 v19 20221014 have been recoded\n",
         "- the second appearance of Y has been recoded as Y1 because it has different logic\n",
         "- the second appearance of BH has been recoded as BH1 because it has different logic\n",
         "\n",
-        "\"DL: Other_Work_Sites\" was commented out of the IHC on 20190213"
+        "\"DL: Other_Work_Sites\" was commented out of the IHC on 20190213 so is not processed further in this script"
       ]
     },
     {
@@ -377,18 +377,7 @@
         "# define IHC_dict dictionary to catalogue IHC case statements\n",
         "#########################################################################\n",
         "case_statement_list = [m.groupdict()\n",
-        "                       for m in case_ptrn.finditer(case_statements_string)]\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 8,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# for case in case_statement_list:\n",
-        "#     print(case['wre_code'])\n",
-        "\n",
+        "                       for m in case_ptrn.finditer(case_statements_string)]\n",
         "codes1 = case_statement_list[:NUM_CASES]\n",
         "codes2 = case_statement_list[NUM_CASES:2*NUM_CASES]\n",
         "codes3 = case_statement_list[2*NUM_CASES:3*NUM_CASES]\n",
@@ -404,51 +393,7 @@
         "    if current_code in codes_seen[:i]:\n",
         "        current_code = current_code+'1'\n",
         "        codes1[i]['wre_code'] = current_code\n",
-        "    # print(f\"{codes1[i]}\")\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'DV'"
-            ]
-          },
-          "execution_count": 9,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "codes1[0]['wre_code']"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 10,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "{'case_statement': \"WHEN  Cr_Expns_Descn_Txt  LIKE ANY ('%ABN%registration%', '%BUSINESS%NAME%REGISTRATION%','%BUSINESS%REGISTRATION%', '%company%registration%'\\n,'%ABN%reg%', '%BUSINESS%NAME%REG%','%BUSINESS%REG%', '%company%reg%'\\n,'BUSINESS NAME'\\n)\\nAND Cr_Expns_Descn_Txt  NOT LIKE ALL (\\n'BUSINESS VEHICLE REGO' , 'COMPANY CAR REGO PAYMENT'\\n,'%HONDA REGISTRATION%','%JEEP REGISTRATION%','%TRAILER REGISTRATION%'\\n,'%TRIP REGO FEE%','%VAN - REGISTRATION%','%CAR REGISTRATION%'\\n)\\nTHEN 'DI: Business Registration'\",\n",
-              " 'logic': \"  Cr_Expns_Descn_Txt  LIKE ANY ('%ABN%registration%', '%BUSINESS%NAME%REGISTRATION%','%BUSINESS%REGISTRATION%', '%company%registration%'\\n,'%ABN%reg%', '%BUSINESS%NAME%REG%','%BUSINESS%REG%', '%company%reg%'\\n,'BUSINESS NAME'\\n)\\nAND Cr_Expns_Descn_Txt  NOT LIKE ALL (\\n'BUSINESS VEHICLE REGO' , 'COMPANY CAR REGO PAYMENT'\\n,'%HONDA REGISTRATION%','%JEEP REGISTRATION%','%TRAILER REGISTRATION%'\\n,'%TRIP REGO FEE%','%VAN - REGISTRATION%','%CAR REGISTRATION%'\\n)\\n\",\n",
-              " 'wre_code': 'DI',\n",
-              " 'code_desc': 'Business Registration'}"
-            ]
-          },
-          "execution_count": 10,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "codes1[9]"
+        "    # print(f\"{codes1[i]}\")\n"
       ]
     },
     {
@@ -475,13 +420,11 @@
         "    # text = re.sub(r\"(\\w+)(%+)(\\w+)\", r'\\1 \\3', text)\n",
         "    return text\n",
         "\n",
-        "\n",
         "def assemble_clause(search_term):\n",
         "    search_term = [strip_char(text) for text in re.split(',', search_term)]\n",
         "    search_term = \"|\".join(search_term)\n",
         "    # print(f\"{search_term=}\")\n",
         "    return search_term\n",
-        "\n",
         "\n",
         "# split each case statement into separate clauses\n",
         "for code, case_statement in IHC_dict.items():\n",
@@ -523,40 +466,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "{'code_descr': 'Parking/Tolls', 'like_any': 'parking|toll|car park|CARPARK|ETAG|motorway|citylink|CITY LINK|CITI LINK|eastlink|LINKT|park|EAST LINK|PARKIG|PARKIGN|PARKIING|PARKIMG|PARKIN|PARKINH|PARKINING|PARK|CAR PARKS|E TAG|WILSON|WILSONS|PAKING', 'regexp': None, 'not_like_all': 'royal|plaza|regis|tower|national park|SPARK|postage|percentage|security tag|advantage|name tag|instagram|parker pen|LEAD TAGGING|LUNA PARK|TOLLS OF TRADE|PAKING BOXES|ALBERT PARK|ERSKIN PARK|EXL CAR PARKS|MACQUARIE PARK|DUDLEY PARK|NATURE PARK|PARKES|PARK MANAGEMENT|PARKVILLE|ROSNY PARK|STUART PARK|SHIFT PARK TO|ARIAH PARK|PRESIDENTS PARK|ERSKINE PARK'}\n"
-          ]
-        }
-      ],
-      "source": [
-        "print(IHC_dict['Y'])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 13,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "{'code_descr': 'Parking/Tolls', 'like_any': 'ALBERT PARK PARKING|ERSKIN PARK PARKING|EXL CAR PARKS PARKING|MACQUARIE PARK PARKING|DUDLEY PARK PARKING|NATURE PARK PARKING|PARKES PARKING|PARK MANAGEMENT PARKING|PARKVILLE PARKING|ROSNY PARK PARKING|STUART PARK PARKING|SHIFT PARK PARKING|ARIAH PARK PARKING|PRESIDENTS PARK PARKING|ERSKINE PARK PARKING PARKING ALBERT PARK|PARKING ERSKIN PARK|PARKING EXL CAR PARKS|PARKING MACQUARIE PARK|PARKING DUDLEY PARK|PARKING NATURE PARK|PARKING PARKES|PARKING PARK MANAGEMENT|PARKING PARKVILLE|PARKING ROSNY PARK|PARKING STUART PARK|PARKING SHIFT PARK TO|PARKING ARIAH PARK|PARKING PRESIDENTS PARK|PARKING ERSKINE PARK', 'regexp': None, 'not_like_all': None}\n"
-          ]
-        }
-      ],
-      "source": [
-        "print(IHC_dict['Y1'])"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 14,
       "metadata": {
         "id": "DaXGx53IoUs_",
@@ -572,7 +481,7 @@
         }
       ],
       "source": [
-        "print(get_case_statement('H', 'code_descr'))"
+        "print(get_case_statement('Y'))"
       ]
     },
     {
@@ -592,7 +501,7 @@
         }
       ],
       "source": [
-        "print(get_case_statement('H', 'like_any'))"
+        "print(get_case_statement('Y1'))"
       ]
     },
     {
@@ -616,6 +525,14 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Dump IHC_dict"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 17,
       "metadata": {
@@ -628,54 +545,7 @@
         "\n",
         "# write text description of case statement dictionary to file\n",
         "with open(outfile, 'w') as case_statement_fh:\n",
-        "    case_statement_fh.write(json.dumps(IHC_dict))\n",
-        "\n",
-        "# read text description of case statement dictionary from file\n",
-        "with open(outfile, 'r') as f:\n",
-        "    dictionary_as_text = f.read()\n",
-        "\n",
-        "# reconstruct the case statement dictionary from its text description\n",
-        "IHC_dict = json.loads(dictionary_as_text)\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 18,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "101"
-            ]
-          },
-          "execution_count": 18,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "len(IHC_dict.keys())"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 19,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "dict_keys(['DV', 'BG', 'A', 'B', 'E', 'CI', 'BS', 'DK', 'C', 'DI', 'F', 'G', 'H', 'J', 'I', 'V', 'D', 'BH', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'U', 'S', 'T', 'CK', 'W', 'X', 'Y', 'Y1', 'Z', 'BA', 'BB', 'BC', 'BF', 'BI', 'BJ', 'BK', 'BL', 'BM', 'BN', 'BO', 'BQ', 'BR', 'AM', 'BT', 'BU', 'BV', 'BW', 'BX', 'BY', 'BZ', 'CA', 'CB', 'CC', 'CD', 'CE', 'CF', 'CG', 'CH', 'CJ', 'CM', 'CN', 'CO', 'CP', 'CQ', 'CR', 'CS', 'CT', 'CU', 'CV', 'CW', 'CX', 'CY', 'CZ', 'DA', 'DB', 'DC', 'DD', 'DE', 'DF', 'DG', 'DH', 'DJ', 'DT', 'CL', 'BD', 'BP', 'DM', 'BH1', 'ZZZ', 'DO', 'DN', 'DP', 'DQ', 'DR', 'DS'])"
-            ]
-          },
-          "execution_count": 19,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "IHC_dict.keys()"
+        "    case_statement_fh.write(json.dumps(IHC_dict))\n"
       ]
     }
   ],
