fixed key ordering issue

--- a/set_IHC_dict.ipynb
+++ b/set_IHC_dict.ipynb
@@ -5,7 +5,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## Save IHC case statements in a Dictionary"
+        "## Save IHC case statements in an ordered dictionary"
       ]
     },
     {
@@ -15,16 +15,21 @@
         "id": "k5P8IqGdoUs6"
       },
       "source": [
-        "Two case statements in IHC - 2021 v19 20221014 have been recoded\n",
-        "- the second appearance of Y has been recoded as Y1 because it has different logic\n",
-        "- the second appearance of BH has been recoded as BH1 because it has different logic\n",
+        "Two case statements in IHC - 2021 v19 20221014 have been recoded programatically\n",
+        "- the second appearance of Y has been recoded as Y1 because it has different logic, but both map to 96\n",
+        "- the second appearance of BH has been recoded as BH1 because it has different logic, but both map to 9\n",
         "\n",
-        "\"DL: Other_Work_Sites\" was commented out of the IHC on 20190213 so is not processed further in this script"
+        "\n",
+        "The IHC has two separate heirachies of 101 LFs into 99 labels\n",
+        "- One heirachy for Cr_Expns_Descn_Txt\n",
+        "- Another heirachy for Trvl_Expns_Descn_Txt, Self_Educn_Expns_Descn_Txt and WRE_Othr_Expns_Descn_Txt\n",
+        "\n",
+        "N.B. \"DL: Other_Work_Sites\" was commented out of the IHC on 20190213 so is not processed further in this script\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -50,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 15,
       "metadata": {
         "id": "K_OsWzuGoUs8"
       },
@@ -94,7 +99,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 16,
       "metadata": {
         "id": "Q2pTdXJvoUs8"
       },
@@ -137,7 +142,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -165,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 18,
       "metadata": {
         "id": "euJznMeGoUs9"
       },
@@ -192,7 +197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 19,
       "metadata": {
         "id": "wl93JFIWoUs9",
         "outputId": "8f4e0a18-9b68-4831-95e5-09e3a72b96b1"
@@ -340,7 +345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -378,35 +383,35 @@
         "#########################################################################\n",
         "case_statement_list = [m.groupdict()\n",
         "                       for m in case_ptrn.finditer(case_statements_string)]\n",
-        "codes1 = case_statement_list[:NUM_CASES]\n",
-        "codes2 = case_statement_list[NUM_CASES:2*NUM_CASES]\n",
-        "codes3 = case_statement_list[2*NUM_CASES:3*NUM_CASES]\n",
-        "codes4 = case_statement_list[3*NUM_CASES:4*NUM_CASES]\n",
+        "Cr_Expns_order = case_statement_list[:NUM_CASES]\n",
+        "not_Cr_Expns_order = case_statement_list[NUM_CASES:2*NUM_CASES]\n",
+        "# codes3 = case_statement_list[2*NUM_CASES:3*NUM_CASES]\n",
+        "# codes4 = case_statement_list[3*NUM_CASES:4*NUM_CASES]\n",
         "\n",
         "# for i in range(101):\n",
-        "#     print(f\"{codes1[i]['wre_code']}\\t{codes2[i]['wre_code']}\\t{codes3[i]['wre_code']}\\t{codes4[i]['wre_code']}\")\n",
+        "#     print(f\"{Cr_Expns_order[i]['wre_code']}\\t{codes2[i]['wre_code']}\\t{codes3[i]['wre_code']}\\t{codes4[i]['wre_code']}\")\n",
         "\n",
         "codes_seen = []\n",
-        "for i in range(101):\n",
-        "    current_code = codes1[i]['wre_code']\n",
+        "for i in range(NUM_CASES):\n",
+        "    current_code = Cr_Expns_order[i]['wre_code']\n",
         "    codes_seen.append(current_code)\n",
         "    if current_code in codes_seen[:i]:\n",
         "        current_code = current_code+'1'\n",
-        "        codes1[i]['wre_code'] = current_code\n",
-        "    # print(f\"{codes1[i]}\")\n"
+        "        Cr_Expns_order[i]['wre_code'] = current_code\n",
+        "    # print(f\"{Cr_Expns_order[i]}\")\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# IHC_dict = {statement['wre_code']: statement['case_statement']\n",
-        "#             for statement in case_statement_list[:NUM_CASES]}\n",
         "\n",
         "IHC_dict = {statement['wre_code']: statement['case_statement']\n",
-        "            for statement in codes1}\n",
+        "            for statement in Cr_Expns_order}\n",
+        "\n",
+        "\n",
         "\n",
         "preprocess1 = re.compile(r\"(\\w+)(%+)(\\w+)\")\n",
         "preprocess2 = re.compile(r\"['\\n()%]\")\n",
@@ -466,7 +471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 22,
       "metadata": {
         "id": "DaXGx53IoUs_",
         "outputId": "940491cd-92f3-4eb3-ecff-a0f4bbac0891"
@@ -476,7 +481,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Home Office\n"
+            "{'code_descr': 'Parking/Tolls', 'like_any': 'parking|toll|car park|CARPARK|ETAG|motorway|citylink|CITY LINK|CITI LINK|eastlink|LINKT|park|EAST LINK|PARKIG|PARKIGN|PARKIING|PARKIMG|PARKIN|PARKINH|PARKINING|PARK|CAR PARKS|E TAG|WILSON|WILSONS|PAKING', 'regexp': None, 'not_like_all': 'royal|plaza|regis|tower|national park|SPARK|postage|percentage|security tag|advantage|name tag|instagram|parker pen|LEAD TAGGING|LUNA PARK|TOLLS OF TRADE|PAKING BOXES|ALBERT PARK|ERSKIN PARK|EXL CAR PARKS|MACQUARIE PARK|DUDLEY PARK|NATURE PARK|PARKES|PARK MANAGEMENT|PARKVILLE|ROSNY PARK|STUART PARK|SHIFT PARK TO|ARIAH PARK|PRESIDENTS PARK|ERSKINE PARK'}\n"
           ]
         }
       ],
@@ -486,7 +491,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 23,
       "metadata": {
         "id": "BPLyOV8NoUs_",
         "outputId": "be971fac-0979-4a28-8737-52f87bd44174"
@@ -496,7 +501,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "home|home office|homeoffice|Home Study|home as office|home based office|work from home|working from home|WORKING AT HOME|Work at home|WFH|WORKFROMHOME|STUDY FURNITURE|STUDY ROOM|HLP|HLP|HO|HOE|HOE|H.O.E|H/O|H/O|H O 1000*0.45|H.O.E|H|HO|H/L/P|L & P|LP|H.O.E.|H O E|H O|HO: 10 HRS/WK|HO5X48X0.52|H.O EX|HM OFF|H.O|H.O 2HRS X 48WKS X $0.52|H.O 8HRS X 48WKS X $0.52|H.O.X.|HOM OFF|H.O.X|HO: 15 H/W|HO: 10 H/W|HO: 20 HRS/WK|HOU 5 X 48 X .52|HO: 5 HRS/WK|HOU 4 X 48 X .52|HOU 3 X 48 X .52|H O 100*0.45|H OFFIS|HO: 15 HRS/WK|H.O 10HRS X 48WKS X $0.52|HOU 10 X 48 X .52|HO: 6HRS P/WK*48WKS*.52|H.O. 2HRS X 48WKS X 0.52|H.O 2*5*48W*.52|H.O.|HO: 5 H/W|H.O 3HRS X 48WKS X $0.52|H.O. 15 HRS X 48 WKS @ 52C|H O EXP|H.O 10H*48W*.52|H.O 10HRS X 40WKS X $0.52|HOU 8 X 48 X .52|H.O 5HRS X 48WKS X $0.52|HO: 5HRS*48*45C|H O 1000*0.55|HMOFF|HO10X48X0.52|H.O 1*5*48W*.52|H.O 5HRS X 40WKS X $0.52|HO: 4HRS P/WK*48WKS*.52|H.O 4HRS X 48WKS X $0.52|HO: 3HRS P/WK*48WKS*.52|HO: 2 H/W|H.O. 20 HRS X 48 WKS @ 52C|H O 1000*045|H OFF|H O|H.O|HM OFF|HO-|HO|HO:|HO HR|HO PW|HO WKS|HO WEEK|HOFF|HOME OFFICE|WFH ALLOWANCE|HME OFF|H/OFFICE|HIME OFFICE|HOFFICE|H-OFFICE|HO|WFH EXPENSES|X52CENTS|APP: WFH|FOOTREST|WFH RUNNING EXPENSES|WFH|WFH-|WFHO|WFHEXP|WFH|JOB SEEKING - WFH - COVID|COVID19 EXTRA HRS|COVID-19|COVID19|COVID|FIXED RATE|FIXED RATE METHOD|FIXED RATE WFH|HOME OFFICE - NOT COVID RELATE|HOME OFFICE CALC NON COVID|SHORTCUT|USE OF HOME OFFIC PRE COVID|WFH NON-COVID 40HRS|WFH PRIOR TO COVID 19|WFH PRIOR TO COVID 19|WORKING FORM HOME BEFORE COVID|HL&P|COVID|SHORTCUT|SHORT CUT|80 C|FIXED RATE|0.80|MAR JUN|52C|FIXED HOURLY RATE|X 80C|APR JUN|L&P|*80 C|WFH|15 WKS|16 WKS|17 WKS|18 WKS\n"
+            "{'code_descr': 'Parking/Tolls', 'like_any': 'ALBERT PARK PARKING|ERSKIN PARK PARKING|EXL CAR PARKS PARKING|MACQUARIE PARK PARKING|DUDLEY PARK PARKING|NATURE PARK PARKING|PARKES PARKING|PARK MANAGEMENT PARKING|PARKVILLE PARKING|ROSNY PARK PARKING|STUART PARK PARKING|SHIFT PARK PARKING|ARIAH PARK PARKING|PRESIDENTS PARK PARKING|ERSKINE PARK PARKING PARKING ALBERT PARK|PARKING ERSKIN PARK|PARKING EXL CAR PARKS|PARKING MACQUARIE PARK|PARKING DUDLEY PARK|PARKING NATURE PARK|PARKING PARKES|PARKING PARK MANAGEMENT|PARKING PARKVILLE|PARKING ROSNY PARK|PARKING STUART PARK|PARKING SHIFT PARK TO|PARKING ARIAH PARK|PARKING PRESIDENTS PARK|PARKING ERSKINE PARK', 'regexp': None, 'not_like_all': None}\n"
           ]
         }
       ],
@@ -506,7 +511,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 24,
       "metadata": {
         "id": "PHIjFruioUs_",
         "outputId": "c51cfb97-cf41-4be2-d02a-ff7bd00a3574"
@@ -534,7 +539,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 25,
       "metadata": {
         "id": "-HfUsStMoUtA"
       },
